# ohrwurm

./: ARCHITECTURE.md  DEVELOPMENT.md  PROJECT_STATUS.md  README.md  docker-compose.yml  package.json
backend/: .env  README.md  package.json  pyproject.toml  requirements.txt  tsconfig.json
backend/app/: __init__.py  main.py
backend/app/api/graphql/: resolvers.py  schema.py
backend/app/services/: neo4j.py  postgres.py
backend/tests/: conftest.py  test_graphql_resolvers.py  test_neo4j_service.py  test_postgres_service.py
frontend/: package.json  vite.config.ts
